# pluggable-namespace

./: .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yaml
requirement/: console.txt  rend.txt  test.txt
src/_cli/: README.rst  config.yaml
src/_cli/plugin/: completer.py  config.py  console.py  init.py  legacy.py  ref.py  state.py  watch.py
src/_config/: config.yaml
src/_config/plugin/: choices.py  init.py  source.py  subcommands.py
src/_log/plugin/: console.py  fallback.py  file.py  init.py  noop.py
src/_patt/: config.yaml
src/_patt/plugin/: init.py  inst.py  sh.py
src/_pop/: file.py  sub.py  test.py
src/_pop/contract/: process.py
src/_pop/sub/: virtual.py
src/_rend/: README.rst  __main__.py
src/_rend/exc/: rend.py
src/_rend/output/: json_out.py  nested.py  yaml_out.py
src/_rend/rend/: init.py  jinja.py  yaml_file.py  yaml_template.py
src/_seed/: config.yaml
src/_seed/seed/: init.py
src/_seed/template/plugin/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  pyproject.toml.jinja
src/cpns/: __init__.py
src/hub/: __main__.py  config.yaml
src/hub/plugin/: completer.py  config.py  init.py  legacy.py  ref.py  watch.py
src/pns/: __init__.py  _contract.py  _data.py  _debug.py  _hub.py  config.yaml  contract.py  contract.pyx  data.py  data.pyx  dir.py  dirs.py  exc.py  hub.py  load.py  loader.py  loop.py  mod.py  ref.py  scanner.py  shell.py  shim.py  verify.py
src/pns/config/: choices.py  default.py  display_priority.py  group.py  init.py  options.py  os.py  positional.py  source.py  subcommands.py  type.py
src/pns/log/: basic.py  init.py  timed_rolling.py
src/pns/mods/: config.py  contract.py  sub.py  task.py
test/cli/: conftest.py  test_cli.py  test_config.py  test_console.py  test_init.py  test_ref.py  test_state.py  test_watch.py
test/cli/scratch/: config.yaml  test.py
test/cli/tpath/plugin/: config.yaml
test/cli/tpath/src/: config.yaml
test/patt/: conftest.py  test_inst.py
test/patt/tpath/mods/: config.yaml
test/pns/: conftest.py
test/pns/contract/: ctx.py  ctx_update.py  many.py  test.py
test/pns/coro/contract/: test.py
test/pns/func/: test_basic.py  test_bench.py  test_config.py  test_contract_ctx.py  test_coro.py  test_fail.py  test_init_attrs.py  test_log.py  test_no_raise_on_pre_failure.py  test_raise_on_pre_failure.py  test_ref.py  test_relative.py  test_serial.py  test_task.py
test/pns/integration/: test_hub.py
test/pns/mods/: dunder.py  many.py  test.py  testing.py
test/pns/mods/contract_ctx/: ctx.py  ctx_args.py  (+1 more)
test/pns/unit/: test_contract.py  test_sigs.py
test/rend/: conftest.py
test/rend/files/: import.sls  k8_crd.sls  shebang.yml
test/rend/integration/: test_init.py  test_sls.py  test_yaml.py  test_yte.py
test/seed/: conftest.py  test_init.py
tests/: conftest.py
tests/cli/: conftest.py  test_cli.py  test_init.py
tests/func/: test_basic.py  test_bench.py  test_config.py  test_contract_ctx.py  test_coro.py  test_dyne.py  test_fail.py  test_init_attrs.py  test_no_raise_on_pre_failure.py  test_relative.py  test_sub.py
tests/integration/contracted/: test_contracted_access.py
tests/mods/: falias_func.py  test.py
tests/patt/: test_inst.py
tests/pns/coro/: test.py
tests/pns/func/: test_basic.py  test_bench.py  test_coro.py  test_fail.py  test_init_attrs.py  test_raise_on_pre_failure.py
tests/pns/integration/: test_hub.py
tests/pns/tpath/: README.rst
tests/regression/contract_masking/: test_contract_masking.py  test_duplicate_contracts.py
tests/rend/files/: order.yml  test.yml
tests/rend/integration/: test_init.py  test_jinja.py  test_json.py  test_sls.py  test_toml.py  test_yaml.py  test_yte.py
tests/rend/unit/: test_basic.py
tests/seed/: conftest.py  test_init.py
tests/tpath/merge/: config.yaml
tests/unit/: test_contract.py  test_sigs.py
(+46 files in other folders)
